--- a/css/rakie.css
+++ b/css/rakie.css
@@ -46,6 +46,7 @@ h1 {
   font-size: 12px;
 }
 .download .item a button {
+  cursor: pointer;
   border-radius: 15px;
   background-color: #F9F5F2;
 }
