--- a/styles/sass/rakie.scss
+++ b/styles/sass/rakie.scss
@@ -45,6 +45,7 @@ h1 {
         }
         a {
             button {
+                cursor: pointer;
                 border-radius: 15px;
                 background-color: #F9F5F2;
                 p {
