--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Cinzel:wght@400;700;900&display=swap');
+// zmienne wprowadza się znakiem $ np: $color: #F9F5F2
 *,
 *::before,
 *::after { 
@@ -167,6 +168,7 @@ body {
 
 
 .background {
+    z-index: -1;
 
     .triangle {
         width: 100%;
