--- a/css/linktree.css
+++ b/css/linktree.css
@@ -11,18 +11,21 @@
 
 .hello {
   margin-top: 80px;
-  margin-left: 20px;
-  margin-right: 20px;
-  max-width: 400px;
+  padding: 0 10px;
+  width: 100%;
+  align-items: center;
   z-index: 2;
 }
-.hello h2 {
+.hello .hello1 {
+  max-width: 400px;
+}
+.hello .hello1 h2 {
   font-family: "Cinzel", serif;
   font-size: 16px;
   font-weight: 300;
   text-decoration: none;
 }
-.hello h1 {
+.hello .hello1 h1 {
   margin: 0;
   font-family: "Cinzel", serif;
   font-size: 38px;
@@ -46,28 +49,28 @@
   align-items: center;
   width: 100%;
   z-index: 2;
+  background-image: url("../assets/STRONA KLAUDII/Link_Tree_background.png");
+  background-size: cover;
 }
 .links__link {
-  background-color: rgba(249, 245, 242, 0.2666666667);
   height: 40px;
   width: 210px;
   margin: 10px 0;
+  background-color: rgba(249, 245, 242, 0);
+}
+.links__link a {
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 50px 50px 50px 50px;
+  border: solid 0px;
+  color: black;
+  text-decoration: none;
 }
 .links__link button {
+  background-color: rgba(249, 245, 242, 0.8);
   height: 100%;
   width: 100%;
   border-radius: 50px 50px 50px 50px;
   border: solid 1px;
   font-family: "Abhaya Libre", serif;
   font-weight: 500;
-}
-
-.fixed-bottom-image {
-  position: fixed;
-  background-image: url("/assets/STRONA KLAUDII/Link_Tree_background.png");
-  background-size: cover;
-  width: 100%;
-  height: 220px;
-  bottom: 0;
-  z-index: 1;
 }/*# sourceMappingURL=linktree.css.map */
