--- a/styles/sass/linktree.scss
+++ b/styles/sass/linktree.scss
@@ -11,20 +11,24 @@
 
 .hello {
     margin-top: 80px;
-    margin-left: 20px;
-    margin-right: 20px;
-    max-width: 400px;
-    h2 {
-        font-family: 'Cinzel', serif;
-        font-size: 16px;
-        font-weight: 300;
-        text-decoration: none;
-    }
-    h1 {
-        margin: 0;
-        font-family: 'Cinzel', serif;
-        font-size: 38px;
-        width: 100%;
+    padding: 0 10px;
+    width: 100%;
+    align-items: center;
+
+    .hello1 {
+        max-width: 400px;
+        h2 {
+            font-family: 'Cinzel', serif;
+            font-size: 16px;
+            font-weight: 300;
+            text-decoration: none;
+        }
+        h1 {
+            margin: 0;
+            font-family: 'Cinzel', serif;
+            font-size: 38px;
+            width: 100%;
+        }
     }
     z-index: 2;
 }
@@ -33,24 +37,35 @@
     align-items: center;
     margin: 20px 0;
     width: 100%;
+    z-index: 2;
     img {
         width: 250px;
         height: 100%;
         border-radius: 150px 150px 150px 150px;
         border: solid 1.5px;
     }
-    z-index: 2;
 }
 
 .links {
     align-items: center;
     width: 100%;
+    z-index: 2;
+    background-image: url("../assets/STRONA KLAUDII/Link_Tree_background.png");
+    background-size: cover;
     &__link {
-        background-color: #f9f5f244;
         height: 40px;
         width: 210px;
         margin: 10px 0;
+        background-color: #f9f5f200;
+        a {
+            background-color: rgba(255, 255, 255, 0);
+            border-radius: 50px 50px 50px 50px;
+            border: solid 0px;
+            color: black;
+            text-decoration: none;
+        }
         button {
+            background-color:#f9f5f2cc;
             height: 100%;
             width: 100%;
             border-radius: 50px 50px 50px 50px;
@@ -59,15 +74,4 @@
             font-weight: 500;
         }
     }
-    z-index: 2;
-}
-
-.fixed-bottom-image {
-    position: fixed;
-    background-image: url('/assets/STRONA KLAUDII/Link_Tree_background.png');
-    background-size: cover;
-    width: 100%;
-    height: 220px;
-    bottom: 0;
-    z-index: 1;
 }
