--- a/styles/sass/linktree.scss
+++ b/styles/sass/linktree.scss
@@ -53,6 +53,7 @@
     background-image: url("../assets/STRONA KLAUDII/Link_Tree_background.png");
     background-size: cover;
     &__link {
+        color: black;
         height: 40px;
         width: 210px;
         margin: 10px 0;
