--- a/styles/sass/linktree.scss
+++ b/styles/sass/linktree.scss
@@ -66,6 +66,7 @@
             text-decoration: none;
         }
         button {
+            color: black;
             background-color:#f9f5f2cc;
             height: 100%;
             width: 100%;
