--- a/css/linktree.css
+++ b/css/linktree.css
@@ -67,6 +67,7 @@
   text-decoration: none;
 }
 .links__link button {
+  color: black;
   background-color: rgba(249, 245, 242, 0.8);
   height: 100%;
   width: 100%;
